# manage_expenses_backend

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: b67a3b69899a_initial_migration.py  d5e79c2ae3f2_initial.py
src/: main.py
src/dao/: __init__.py  category_dao.py  expense_dao.py  sql_alchemy_models.py
src/entities/: __init__.py  balance.py  category.py  expense.py  expense_origin.py
src/entities/common/: __init__.py  base_entity.py  config.py
src/mappers/: __init__.py  category_mapper.py  expense_mapper.py
src/models/: __init__.py  new_category_model.py  new_expense_model.py  registered_category_model.py  registered_expense_model.py
src/routers/: category_router.py  expense_router.py
tests/integration/: test_insert_category.py
