[project]
name = "manage-expenses-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "roger.barriga",email = "roger.barriga@scribsoft.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (<2.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyodbc (>=5.2.0,<6.0.0)"
]

[tool.poetry]
# packages = [{include = "manage_expenses_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
